# chaosllm

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  proxy.yaml  pyproject.toml
.github/workflows/: ci.yml  scheduled-experiment.yml
chaosllm/: __init__.py  cli.py
chaosllm/faults/: __init__.py  models.py  pipeline.py  provider_shapes.py
chaosllm/metrics/: __init__.py  events.py  schema.sql  store.py  tap.py
chaosllm/proxy/: __init__.py  app.py  budget.py  config.py  control.py  demo_trigger.py
chaosllm/report/: __init__.py  charts.py  render.py
chaosllm/runner/: __init__.py  loadgen.py  phases.py  runner.py
chaosllm/spec/: __init__.py  loader.py  models.py
dashboard/: .env.example  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json
dashboard/src/: App.css  App.jsx  ComparisonShowcase.jsx  HowItWorks.jsx  Sparkline.jsx  TriggerButton.jsx  describeRun.js  main.jsx
demo/: Dockerfile  pyproject.toml
demo/demo/: __init__.py  circuit_breaker.py  corpus.py  llm_client.py  main.py  retrieval.py
demo/tests/: conftest.py  test_circuit_breaker.py  test_llm_provider_config.py  test_naive_vs_resilient.py  test_retrieval.py
docs/: resilience-patterns.md
experiments/: llm-latency-spike.yaml  llm-timeout-spike.yaml  quick-demo.yaml  vector-db-slow.yaml
payloads/: questions.jsonl
tests/: test_budget.py  test_cli.py  test_control_api.py  test_control_events_api.py  test_demo_trigger.py  test_faults_pipeline.py  test_loadgen.py  test_metrics_events.py  test_metrics_store_migration.py  test_metrics_tap.py  test_provider_shapes.py  test_proxy_anthropic.py  test_proxy_budget.py  test_proxy_config.py  test_proxy_cors.py  test_proxy_demo_trigger.py  test_proxy_latency_recording.py  test_proxy_openai.py  test_proxy_passthrough.py  test_proxy_streaming.py  test_runner_assertions.py  test_runner_e2e.py  test_shipped_experiments.py  test_spec_loader.py
