[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaosllm"
version = "0.1.0"
description = "Chaos engineering for LLM-powered applications."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
chaosllm = "chaosllm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["chaosllm"]

[tool.ruff]
line-length = 100
target-version = "py312"
# demo/ has its own pyproject.toml, own deps, own ruff config, and its own
# CI job; excluded here so it isn't linted twice with the wrong config.
extend-exclude = ["demo"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# typer/FastAPI's Option/Argument/Depends are meant to be called in defaults.
"chaosllm/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
strict = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
