[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaosllm-demo"
version = "0.1.0"
description = "Demo RAG app for chaosllm: naive vs resilient behavior under fault injection."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2.7",
    "uvicorn[standard]>=0.30",
    "chromadb>=0.5",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["demo"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
